having issues on the .io page of my repo where the entire website is showing instead of scaling and scrolling. When i look at my index.html locally, it scrolls normally, and when i look at my .io page on mobile, it looks good there too. just trying to sort it so the commit messages will be uninformative.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     font-family:  'Roboto Condensed', sans-serif;
     margin: 0px;
 }
+.container {
+    display: flex;
+    flex-direction: column;
+}
 .header {
     display: flex;
     justify-content: space-between;
